tp_contact_set_attributes: don't warn on genuinely absent interfaces

The warning message says something like "... supposedly implements
Contacts and Aliasing" but we don't actually check that the connection
claims to implement Aliasing (in either its ContactAttributeInterfaces
or Interfaces). SimplePresence has the same bug.

The Mission Control regression tests trigger this, since they
include some simulated connections with small subsets of interfaces.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=68149
Reviewed-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>